# GAMLR

./: .env.example  .gitignore  CMakeLists.txt  README.md
data/: quantiles_data.hpp
docs/: main.typ
scripts/: plot_gamma.py
src/: CMakeLists.txt  client_main.cpp  offset_estimator.rs  server_main.cpp
src/common/: ClockEstimator.hpp  Socket.hpp  SyncProbe.hpp  Types.hpp
